# Babeltauri

./: .gitignore  BUILD_WINDOWS.md  CRUSH.md  Cargo.toml  MIGRATION_COMPLETE.md  QUICKSTART.md  README-TAURI.md  README.md  RUN_TAURI.sh  TAURI_MIGRATION_PLAN.md  VERSIONS.md  flake.nix  justfile  result  tauri.conf.json
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: release.yml
icons/: create_icon.sh  generate_icon.py
prompts/: es-en.md  pt-en.md
src/: commands.rs  lib.rs  main.rs  model.rs  prompts.rs  translator.rs  ui.rs  update.rs
src-ui/: package-lock.json  package.json
src-ui/src/: App.tsx  index.css
src-ui/src/components/: ChatMessage.tsx  Header.tsx  InputBox.tsx
