[package]
name = "babeltauri"
version = "1.0.0"
edition = "2021"

[lib]
name = "babeltauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
anyhow = "1"
tauri = { version = "2.8.5", features = [] }
dirs = "5"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }
